--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,2 +1,6 @@
 /* For information on how to create your own theme, please see:
 http://ionicframework.com/docs/theming/ */
+ion-toolbar {
+  /* --background: var(--ion-color-primary);
+  --color: var(--ion-color-light);  */
+}
